GDPR acknowledge for fabric/crashlytics